✨ [feat] Enhance UI and add MCP server support
This commit introduces several enhancements and new features to the application, including UI improvements, better theme handling, support for an MCP server, and test updates.

- 🎨 [style] Improves UI theming and map control appearance, especially in dark mode:
 - Fixes the white background issue on the scale control in dark mode by setting the background and border colors.
 - Ensures scale control text is visible in dark mode by setting the text color.
- ✨ [feat] Adds optional MCP server support for enhanced debugging and development:
 - Introduces a new `dev:mcp` script to start the development environment with MCP enabled.
 - Implements `startMcpServer` function that spawns an `electron-mcp-server` process.
 - Generates a random encryption key if `SCREENSHOT_ENCRYPTION_KEY` is not set in the environment.
- 🚜 [refactor] Improves tab management and state normalization:
 - Normalizes tab names to their canonical representation to avoid issues with case sensitivity and aliases.
 - Prevents redundant theme applications by verifying that the theme is not already applied.
 - Updates tab switching logic to use normalized tab names and avoids redundant state updates.
- 🧪 [test] Introduces theme switching and rendering integration tests.
 - 🧪 [test] Updates tab state integration tests to use canonical tab identifiers.
- 🛠️ [fix] Prevents redundant updates and improves chart rendering:
 - Prevents redundant accent color re-application on every click.
 - Prevents unnecessary map theme updates if the map theme data hasn't changed.
- 🧹 [chore] Improves chart rendering and styling:
 - Standardizes chart canvas creation with shared styling hooks.
 - Adds metadata to chart labels for better context and accessibility.
 - Enhances chart hover effects and legend controls for better user interaction.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -184,6 +184,7 @@
   },
   "scripts": {
     "dev": "node scripts/dev-runner.mjs",
+    "dev:mcp": "cross-env ENABLE_MCP=1 node scripts/dev-runner.mjs",
     "dev:vite": "vite",
     "dev:electron": "electron . --inspect=9230 --remote-debugging-port=9222",
     "watch:main": "nodemon --watch main.js --watch preload.js --watch fitParser.js --exec \"echo Main process changed\"",
