--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -396,7 +396,8 @@
     "@types/mocha": "10.0.10",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
@@ -409,17 +410,27 @@
     "electron-vite": "^4.0.1",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-array-func": "^5.1.0",
+    "eslint-plugin-comment-length": "^2.2.2",
+    "eslint-plugin-ex": "^0.0.3",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-listeners": "^1.5.1",
     "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-no-function-declare-after-return": "^1.1.0",
+    "eslint-plugin-no-secrets": "^2.2.1",
     "eslint-plugin-no-unsanitized": "^4.1.4",
+    "eslint-plugin-no-use-extend-native": "^0.7.2",
     "eslint-plugin-perfectionist": "^4.15.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-regexp": "^2.10.0",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-sonarjs": "^3.0.5",
+    "eslint-plugin-switch-case": "^3.0.1",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "eslint-plugin-unicorn": "^61.0.2",
     "eslint-plugin-unused-imports": "^4.2.0",
     "git-cliff": "^2.10.1",
@@ -444,6 +455,7 @@
     "stylelint-config-standard": "^39.0.0",
     "ts-migrate": "^0.1.35",
     "ts-migrate-plugins": "^0.1.35",
+    "typescript": "^5.9.3",
     "vite": "^7.1.9",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
