✨ [skip-ci][feat] Enables macOS smoke tests
Adds a macOS smoke test workflow and improves file opening.

- ✨ [feat] Introduces a new GitHub Actions workflow (`mac-smoke-test.yml`) to run smoke tests on macOS.
   - The workflow is triggered on pushes to the `main` branch and pull requests, specifically when changes are made to files in the `electron-app/`, `fit-test-files/`, or `.github/workflows/mac-smoke-test.yml` directories.
   - It sets up Node.js, installs dependencies, installs Playwright browsers, and runs smoke tests.
   - Uses `macos-14` as the runner.
- 🛠️ [fix] Modifies `registerDialogHandlers.js` to handle file opening more robustly and facilitate automated testing.
   - Adds `resolveForcedOpenFilePath` function, which resolves an environment-provided file path for automated smoke tests, allowing a file to be opened directly via an environment variable (`FFV_E2E_OPEN_FILE_PATH`).
   - Introduces `resolveSelectedPath` to streamline the path resolution process after file selection.
   - Refactors the `dialog:openFile` handler to first check for a forced path before showing the dialog.
   - Adds logging to provide better feedback during automated tests.
- 🧪 [test] Adds Playwright configuration and a test file for end-to-end smoke testing.
   - Creates `playwright.config.ts` to configure Playwright tests, setting timeouts, retries, and trace/screenshot/video recording options.
   - Introduces `open-fit-file.spec.ts` to test the application's ability to open and decode a FIT file.
   - The test launches the Electron app, waits for the window to load, and then evaluates code in the renderer process to open a specified FIT file and verify that it can be read and parsed.
- 🧹 [chore] Updates `package.json` to include a new `test:smoke` script and adds `@playwright/test` as a dev dependency.
   - Updates the version number.
   - Adds a `test:smoke` script that runs Playwright tests.
   - Adds `@playwright/test` as a development dependency.
- 🛠️ [fix] Modifies the 

--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -133,8 +133,10 @@
         "vite/client",
         "vitest.config.ts",
         "vitest.shared.config.ts",
-        "tailwind.config.mjs"
-, "scripts/dev-runner.mjs"    ],
+        "tailwind.config.mjs",
+        "playwright.config.ts",
+        "scripts/dev-runner.mjs"
+    ],
     "typeAcquisition": {
         "enable": true
     }
