--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -196,6 +196,7 @@
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
     "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
+    "test:smoke": "playwright test --config playwright.config.ts",
     "start": "npm run dev",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
     "build-all": "npm run build:vite && electron-builder -mwl",
@@ -391,6 +392,7 @@
     "@eslint/markdown": "7.3.0",
     "@kurkle/color": "^0.4.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
+    "@playwright/test": "^1.56.1",
     "@types/jest": "^30.0.0",
     "@types/jsdom": "^27.0.0",
     "@types/mocha": "10.0.10",
