👷 [ci] Implements packaged macOS smoke test
This commit adds a smoke test for packaged macOS builds.

- ✨ [feat] Introduces `registerSmokeTestHandlers` to manage IPC handlers for smoke tests, enabling automated testing of the packaged application.
   - Registers a "smoke-test:result" listener to capture test outcomes and trigger application exit.
   - Implements a timeout mechanism to ensure tests complete within a defined timeframe.
- 🛠️ [fix] Adds `isSmokeTestMode` and `reportSmokeTestResult` to `preload.js` to allow renderer processes to report test results.
   - Conditionally enables smoke test features based on the `FFV_SMOKE_TEST_MODE` environment variable.
   - Prevents smoke test execution if the environment variable is not set.
- 🛠️ [fix] Modifies `handleOpenFile` to report smoke test results at various stages of file opening and processing.
   - Reports success or failure at different stages, including parameter validation, file reading, parsing, and rendering.
   - Adds detailed information such as file path, record count, and byte length to the report.
- 🚜 [refactor] Modifies `bootstrapMainWindow` to trigger a "menu-open-file" event in smoke test mode, automating file opening.
   - Delays the event dispatch to ensure the main window is fully initialized.
- 🧹 [chore] Adds a new script, `run-mac-smoke-test.cjs`, to launch the packaged macOS build and execute the smoke test.
   - Locates the executable path recursively.
   - Uses `spawn` to execute the application.
- 🧹 [chore] Updates `electron-builder.config.js` to ensure the renderer bundle exists before packaging, invoking Vite's production build if necessary.
- 🧹 [chore] Adds a new `test:smoke:mac` npm script to package the macOS app and run the smoke test.
- 📝 [docs] Updates `.github/workflows/mac-smoke-test.yml` to include a job for running the packaged smoke test.
   - Sets environment variables required for smoke test execution.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.co

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -197,6 +197,7 @@
     "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
     "test:smoke": "playwright test --config playwright.config.ts",
+    "test:smoke:mac": "electron-builder --mac --arm64 --dir && node ./scripts/run-mac-smoke-test.cjs",
     "start": "npm run dev",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
     "build-all": "npm run build:vite && electron-builder -mwl",
