🛠️ [fix] Improve macOS smoke test reliability
Improves the reliability of the macOS smoke test by enhancing output directory resolution and ensuring test API availability.

- 🔍 Updates the smoke test to search for the application in both `release` and `dist` directories, and also allows specifying a custom directory via environment variable.
 - Previously, the test only checked the `release` directory, causing failures when the application was built to a different location.
 - 🧪 Adds checks to ensure that Vitest's test API (e.g., `expect`, `describe`, `it`) is available in the global scope during tests.
 - This mitigates issues where the test API might not be properly initialized, leading to test failures.
 - 💾 Mocks `localStorage` and `sessionStorage` to prevent errors during tests and restores them after each test.
 - ➕ Adds `.last-run.json` to `.gitignore` to prevent it from being committed. [skip-ci] [ci-skip]

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,4 @@ electron-app/.stylelintignore
 electron-app/.env.development
 electron-app/.env.production
 html/
+electron-app/test-results/.last-run.json
