🔧 [build] Standardize electron-builder usage and ensure renderer build for mac smoke/test packaging  - Use --config electron-builder.config.js for all electron-builder invocations (build:electron, build:prod, build:dev, build:dev:all, build:dev:package, build:dev:package:all, build:dev:package:prod, build:dev:package:prod:all, build:dev:package:prod:all:zip, build-all, package)  - Prepend npm run build:vite to test:smoke:mac to ensure renderer assets are built before running the packaged mac smoke test  - Preserve existing flags/targets (e.g. --mac --arm64 --dir, -mwl, -l, --dir) while making the electron-builder config explicit for consistency and reliability [ci-skip][skip-ci]
Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -189,7 +189,7 @@
     "dev:electron": "electron . --inspect=9230 --remote-debugging-port=9222",
     "watch:main": "nodemon --watch main.js --watch preload.js --watch fitParser.js --exec \"echo Main process changed\"",
     "build:vite": "vite build",
-    "build:electron": "electron-builder",
+    "build:electron": "electron-builder --config electron-builder.config.js",
     "build": "npm run build:vite && npm run build:electron",
     "preview": "vite preview",
     "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
@@ -197,10 +197,10 @@
     "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
     "test:smoke": "playwright test --config playwright.config.ts",
-    "test:smoke:mac": "electron-builder --mac --arm64 --dir && node ./scripts/run-mac-smoke-test.cjs",
+    "test:smoke:mac": "npm run build:vite && electron-builder --config electron-builder.config.js --mac --arm64 --dir && node ./scripts/run-mac-smoke-test.cjs",
     "start": "npm run dev",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
-    "build-all": "npm run build:vite && electron-builder -mwl",
+    "build-all": "npm run build:vite && electron-builder --config electron-builder.config.js -mwl",
     "update-changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
     "changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
     "changelog:all": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
@@ -222,7 +222,7 @@
     "clean-releases:9": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 9",
     "clean-releases:10": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 10",
     "clean-releases:all": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1 -deleteTags -keepLast 1000",
-    "package": "electron-builder --dir",
+    "package": "electron-builder --config electron-builder.config.js --dir",
     "typecheck": "tsc --project .\\tsconfig.json",
     "types:build": "tsc --project .\\tsconfig.json --declaration --emitDeclarationOnly --outDir ./types",
     "lint": "eslint --cache --cache-strategy content --cache-location .cache/.eslintcache",
@@ -241,14 +241,14 @@
     "test:e2e": "jest --testPathPattern=e2e",
     "test:ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --coverage",
     "test:tabs": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=verbose tests/unit/tabs",
-    "build:prod": "cross-env NODE_ENV=production electron-builder",
-    "build:dev": "cross-env NODE_ENV=development electron-builder",
-    "build:dev:all": "cross-env NODE_ENV=development electron-builder -l",
-    "build:dev:package": "cross-env NODE_ENV=development electron-builder --dir",
-    "build:dev:package:all": "cross-env NODE_ENV=development electron-builder -l --dir",
-    "build:dev:package:prod": "cross-env NODE_ENV=production electron-builder --dir",
-    "build:dev:package:prod:all": "cross-env NODE_ENV=production electron-builder -l --dir",
-    "build:dev:package:prod:all:zip": "cross-env NODE_ENV=production electron-builder -l --dir --win --x64 --ia32 --mac --linux --zip",
+    "build:prod": "cross-env NODE_ENV=production electron-builder --config electron-builder.config.js",
+    "build:dev": "cross-env NODE_ENV=development electron-builder --config electron-builder.config.js",
+    "build:dev:all": "cross-env NODE_ENV=development electron-builder --config electron-builder.config.js -l",
+    "build:dev:package": "cross-env NODE_ENV=development electron-builder --config electron-builder.config.js --dir",
+    "build:dev:package:all": "cross-env NODE_ENV=development electron-builder --config electron-builder.config.js -l --dir",
+    "build:dev:package:prod": "cross-env NODE_ENV=production electron-builder --config electron-builder.config.js --dir",
+    "build:dev:package:prod:all": "cross-env NODE_ENV=production electron-builder --config electron-builder.config.js -l --dir",
+    "build:dev:package:prod:all:zip": "cross-env NODE_ENV=production electron-builder --config electron-builder.config.js -l --dir --win --x64 --ia32 --mac --linux --zip",
     "format": "npx prettier \"*.{js,md,css,html}\" -c ..\\.prettierrc --write && npx prettier \"utils\\*.{js,md,css,html}\" -c ..\\.prettierrc --write",
     "format:check": "npx prettier \"*.{js,md,css,html}\" -c ..\\.prettierrc --check && npx prettier \"utils\\*.{js,md,css,html}\" -c ..\\.prettierrc --check",
     "format:lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore .",
