--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -197,7 +197,7 @@
     "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
     "test:smoke": "playwright test --config playwright.config.ts",
-    "test:smoke:mac": "npm run build:vite && electron-builder --config electron-builder.config.js --mac --arm64 --dir && node ./scripts/run-mac-smoke-test.cjs",
+    "test:smoke:mac": "cross-env FFV_SMOKE_HARNESS=1 SKIP_VITE_BUNDLE=1 electron-builder --config electron-builder.config.js --mac --arm64 --dir && cross-env FFV_SMOKE_HARNESS=1 node ./scripts/run-mac-smoke-test.cjs",
     "start": "npm run dev",
     "start-prod": "cross-env ELECTRON_IS_DEV=0 electron .",
     "build-all": "npm run build:vite && electron-builder --config electron-builder.config.js -mwl",
