👷 [ci][skip-ci][ci-skip] Use dot reporter and silence Vitest output in CI test script
 - 👷 [ci] Update electron-app/package.json "test:ci" script to add --reporter=dot and --silent to the vitest invocation
 - 🧪 [test] Preserve existing behavior: NODE_OPTIONS=--max-old-space-size=8192 and --coverage remain unchanged; only output format and verbosity are affected
 - 🧹 [chore] Rationale: produce concise, progress-style output in CI and reduce noisy logs to make failures easier to scan and triage
 - 📝 [docs] No runtime or test logic changes; consider documenting CI log preferences if teams rely on different vitest reporters

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,4 @@ electron-app/html/
 electron-app/coverage_output.txt
 electron-app/coverage-temp.json
 electron-app/recent-files-test.json
+electron-app/test-report.junit.xml
