--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -65,11 +65,13 @@ jobs:
 
             - name: Run vitest with coverage
               run: |
-                  npm run test:ci
+                  npm run test:ci -- --reporter=junit --outputFile=test-report.junit.xml
               continue-on-error: true
 
             - name: Upload coverage reports to Codecov
               uses: codecov/codecov-action@v5
+              env:
+                  PYTHONIOENCODING: utf-8
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
                   slug: Nick2bad4u/FitFileViewer
@@ -77,6 +79,15 @@ jobs:
                   files: ./coverage/lcov.info
                   flags: electron_app,unit
                   fail_ci_if_error: true
+
+            - name: Upload test results to Codecov
+              if: ${{ !cancelled() }}
+              uses: codecov/test-results-action@v1
+              env:
+                  PYTHONIOENCODING: utf-8
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  file: test-report.junit.xml
 
             - name: Upload coverage artifact
               uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
