--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -69,25 +69,17 @@ jobs:
               continue-on-error: true
 
             - name: Upload coverage reports to Codecov
-              uses: codecov/codecov-action@v5
-              env:
-                  PYTHONIOENCODING: utf-8
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
-                  slug: Nick2bad4u/FitFileViewer
-                  working-directory: electron-app
-                  files: ./coverage/lcov.info
-                  flags: electron_app,unit
-                  fail_ci_if_error: true
+              run: |
+                  bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f ./coverage/lcov.info -F electron_app -F unit
 
             - name: Upload test results to Codecov
-              if: ${{ !cancelled() }}
-              uses: codecov/test-results-action@v1
+              shell: cmd
+              run: |
+                  chcp 65001
+                  codecov.exe test-results --token ${{ secrets.CODECOV_TOKEN }} --file test-report.junit.xml
               env:
                   PYTHONIOENCODING: utf-8
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
-                  file: test-report.junit.xml
+                  PYTHONUTF8: 1
 
             - name: Upload coverage artifact
               uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
