--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -78,7 +78,7 @@ jobs:
                   slug: Nick2bad4u/FitFileViewer
                   working-directory: electron-app
                   files: ./coverage/lcov.info
-                  flags: electron_app,unit
+                  flags: electron_app
                   fail_ci_if_error: true
 
             - name: Upload test results to Codecov
