--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -76,8 +76,7 @@ jobs:
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
                   slug: Nick2bad4u/FitFileViewer
-                  working-directory: electron-app
-                  files: ./coverage/lcov.info
+                  files: electron-app/coverage/lcov.info
                   flags: electron_app
                   fail_ci_if_error: true
 
@@ -89,7 +88,7 @@ jobs:
                   PYTHONUTF8: 1
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
-                  file: test-report.junit.xml
+                  file: electron-app/test-report.junit.xml
 
             - name: Upload coverage artifact
               uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
