👷 [ci] Fix Codecov uploads on Windows and normalize LCOV paths  - Add electron-app/codecov.exe and invoke it in the Vitest workflow to upload ./coverage/lcov.info (Windows-friendly upload step; continue-on-error to avoid CI hard-fail)  - Keep codecov action as a fallback; remove codecov.exe from .gitignore so the binary is tracked
🔧 [build] Add LCOV normalization script to produce repo-root-relative paths
 - Add electron-app/scripts/normalize-coverage-lcov.mjs which copies coverage from temp dirs and rewrites SF: entries to POSIX, repo-root-relative paths, then writes normalized lcov back to electron-app/coverage/lcov.info
 - This ensures Codecov receives consistent, repo-relative file paths and fixes unusable reports

🔧 [build] Standardize Vitest coverage output and path handling
 - Update electron-app/vitest.config.js to use repo-local globs (remove redundant electron-app/ prefixes), set coverage.dir to ./coverage, and add an lcov reporter configured with projectRoot: path.resolve(__dirname, "..")
 - Adjust include/exclude, setupFiles, SSR transform patterns, typecheck includes and forceRerunTriggers to use generic repo-relative globs for consistent discovery across platforms

🧪 [test] Update renderLapZoneCharts expectations to match current canvas styling
 - Adjust test assertions in electron-app/tests/strictTests/renderLapZoneCharts.test.ts: borderRadius 12px → 8px and boxShadow "0 2px 4px rgba(0,0,0,0.1)" → "0 2px 8px rgba(0,0,0,0.1)"

👷 [ci] Tweak Build workflow path-ignore rules
 - Update .github/workflows/Build.yml paths-ignore to include scripts, tests, assets and vite.config.js so workflow trigger logic treats these files as intended

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -17,6 +17,13 @@ on:
             - "!electron-app"
             - "**/CHANGELOG.md"
             - "CHANGELOG.md"
+            - "electron-app/scripts/**"
+            - "electron-app/scripts"
+            - "electron-app/tests/**"
+            - "electron-app/tests"
+            - "electron-app/assets/**"
+            - "electron-app/assets"
+            - "electron-app/vite.config.js"
     workflow_dispatch:
         inputs:
             branch:
