🔧 [build] Bump package manager and upgrade dependencies  - packageManager: npm@11.6.1 → npm@11.6.2  - Upgrade core/runtime deps: electron 38.2.0 → 39.0.0, maplibre-gl → 5.10.0, chart.js → 4.5.1  - Upgrade test/tooling deps: vitest & @vitest/ui → 4.0.6, @vitest/coverage-v8 → 4.0.6  - Upgrade lint/format tooling and plugins (eslint, @typescript-eslint, @eslint/js/@eslint/css, prettier plugins, stylelint-config-standard)  - Upgrade GitHub Actions libs and other dev deps (e.g. @actions/artifact, @actions/attest, @actions/http-client, @actions/io, jsdom, globals)  - See electron-app/package.json for full list of version bumps and alignment
🧹 [chore] Add updateDeps script
 - Add "updateDeps": "npx ncu -i --install never && npm install --force" to electron-app/package.json to simplify automated dependency updates

🧹 [chore] Update .gitignore
 - Ignore todo.md to prevent local TODO notes from being committed

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,4 @@ electron-app/coverage_output.txt
 electron-app/coverage-temp.json
 electron-app/recent-files-test.json
 electron-app/test-report.junit.xml
+todo.md
