--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -184,7 +184,7 @@
   },
   "scripts": {
     "tests:convert-to-ts": "node ./scripts/convert-tests-to-ts.mjs",
-    "test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --run --reporter=dot --silent",
+    "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192 --require ./tests/env-setup.js\" vitest --run --reporter=dot --silent",
     "test:changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --changed --run --reporter=dot --silent",
     "test:jest": "jest",
     "start": "electron . --inspect=9229 --remote-debugging-port=9222",
@@ -222,7 +222,7 @@
     "prettier:fix": "prettier . --cache --cache-location=.cache/.prettier-cache --cache-strategy=content --write",
     "test:watch": "vitest --watch",
     "test:watch-changed": "vitest --watch --changed",
-    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --run --reporter=dot --silent",
+    "test:coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192 --require ./tests/env-setup.js\" vitest --coverage --run --reporter=dot --silent",
     "test:coverage:enhanced": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --config vitest.config.enhanced.js --coverage --run --reporter=dot --silent",
     "test:enhanced": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --config vitest.config.enhanced.js --run --reporter=dot --silent",
     "test:coverage-changed": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest --coverage --changed --run --reporter=dot --silent",
