🔧 [build] Update dependencies and improve package configuration  - 🔧 Update `@vitest/ui` from `^4.0.8` to `^4.0.9` for improved testing UI features  - 🔧 Update `datatables.net` and `datatables.net-dt` from `^2.3.4` to `^2.3.5` for bug fixes  - 🔧 Update `maplibre-gl` from `^5.11.0` to `^5.13.0` for enhanced mapping capabilities  - 🔧 Update `@typescript-eslint/eslint-plugin` from `^8.46.3` to `^8.46.4` for better TypeScript linting  - 🔧 Update `@vitest/coverage-v8` from `^4.0.8` to `^4.0.9` for improved coverage reporting  - 🔧 Update `color` from `^5.0.2` to `^5.0.3` for color manipulation improvements  - 🔧 Update `electron` from `^39.1.1` to `^39.2.1` for security and performance enhancements  - 🔧 Update `electron-builder` and `electron-builder-squirrel-windows` to `^26.2.0` for better packaging  - 🔧 Update `jsdom` from `^27.1.0` to `^27.2.0` for improved DOM emulation  - 🔧 Update `vitest` from `^4.0.8` to `^4.0.9` for better testing capabilities  - 🔧 Add additional build targets in `package.json` for more flexible distribution options
🧪 [test] Enhance jsdom warning suppression in test environment
 - 🧪 Implement a mechanism to suppress known jsdom warnings in `env-setup.js`
 - 🧪 Add patterns for common jsdom warnings to improve test output clarity

🧪 [test] Improve navigation handling in tests
 - 🧪 Introduce `resolveUrlValue` and `createLocationSnapshot` functions to simulate browser navigation
 - 🧪 Implement `installWindowNavigationShim` to prevent jsdom from executing real navigations
 - 🧪 Ensure window APIs like `alert`, `confirm`, and `prompt` are properly mocked for tests

🧪 [test] Improve storage shim robustness
 - 🧪 Add `safeGet` utility function to safely access properties on objects in `nodeWebStorage.ts`
 - 🧪 Ensure storage installation checks for existing implementations more safely

📝 [docs] Update TypeScript configuration for clarity
 - 📝 Clarify comments in `tsconfig.json` regarding the use of JSDoc and TypeScript checks
 - 📝 Exclude additional asset di

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -206,6 +206,8 @@ jobs:
               if: runner.os == 'Windows'
               run: |
                   choco install -y 7zip.install
+                  # Install NSIS (makensis) to avoid issues with NSIS target building on some runners
+                  choco install -y nsis
 
             - name: Cache node modules (Windows)
               id: cache_node_modules_windows
@@ -472,7 +474,7 @@ jobs:
                     platform_arch=${artifact_name#dist-}
                     mkdir -p "release-dist/$platform_arch"
                     echo "Copying main files from $artifact_dir to release-dist/$platform_arch/"
-                    cp -v "$artifact_dir"/Fit-File-Viewer-* "$artifact_dir"/*.yml "release-dist/$platform_arch/" 2>/dev/null || true
+                    cp -v "$artifact_dir"/Fit-File-Viewer-* "$artifact_dir"/fitfileviewer-* "$artifact_dir"/*.yml "release-dist/$platform_arch/" 2>/dev/null || true
                     # Rename latest-mac.yml if it exists
                     if [ -f "$artifact_dir/latest-mac.yml" ]; then
                       cp "$artifact_dir/latest-mac.yml" "release-dist/$platform_arch/latest-$platform_arch.yml"
