--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -262,13 +262,13 @@
     "dependencies": {
         "@garmin/fitsdk": "^21.178.0",
         "@maplibre/maplibre-gl-leaflet": "^0.1.3",
-        "@vitest/ui": "^4.0.8",
+        "@vitest/ui": "^4.0.9",
         "arquero": "^8.0.3",
         "chart.js": "^4.5.1",
         "chartjs-adapter-date-fns": "^3.0.0",
         "chartjs-plugin-zoom": "^2.2.0",
-        "datatables.net": "^2.3.4",
-        "datatables.net-dt": "^2.3.4",
+        "datatables.net": "^2.3.5",
+        "datatables.net-dt": "^2.3.5",
         "date-fns": "^4.1.0",
         "electron-conf": "^1.3.0",
         "electron-log": "^5.4.3",
@@ -283,7 +283,7 @@
         "leaflet.fullscreen": "^4.0.0",
         "leaflet.locatecontrol": "^0.85.1",
         "leaflet.markercluster": "^1.5.3",
-        "maplibre-gl": "^5.11.0",
+        "maplibre-gl": "^5.13.0",
         "screenfull": "^6.0.2"
     },
     "devDependencies": {
@@ -306,13 +306,13 @@
         "@types/jest": "^30.0.0",
         "@types/jsdom": "^27.0.0",
         "@types/mocha": "^10.0.10",
-        "@typescript-eslint/eslint-plugin": "^8.46.3",
-        "@vitest/coverage-v8": "^4.0.8",
-        "color": "^5.0.2",
+        "@typescript-eslint/eslint-plugin": "^8.46.4",
+        "@vitest/coverage-v8": "^4.0.9",
+        "color": "^5.0.3",
         "cross-env": "^10.1.0",
-        "electron": "^39.1.1",
-        "electron-builder": "^26.0.20",
-        "electron-builder-squirrel-windows": "^26.0.19",
+        "electron": "^39.2.1",
+        "electron-builder": "^26.2.0",
+        "electron-builder-squirrel-windows": "^26.2.0",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-n": "^17.23.1",
@@ -320,7 +320,7 @@
         "eslint-plugin-unicorn": "^62.0.0",
         "git-cliff": "^2.10.1",
         "globals": "^16.5.0",
-        "jsdom": "^27.1.0",
+        "jsdom": "^27.2.0",
         "makensis": "^3.0.3",
         "postcss": "^8.5.6",
         "postcss-value-parser": "^4.2.0",
@@ -339,7 +339,7 @@
         "stylelint-config-standard": "^39.0.1",
         "ts-migrate": "^0.1.35",
         "ts-migrate-plugins": "^0.1.35",
-        "vitest": "^4.0.8"
+        "vitest": "^4.0.9"
     },
     "peerDependencies": {},
     "packageManager": "npm@11.6.2",
@@ -423,9 +423,13 @@
         "win": {
             "icon": "icons/favicon-256x256.ico",
             "target": [
+                "nsis",
+                "nsis-web",
                 "portable",
                 "squirrel",
                 "msi",
+                "zip",
+                "7z",
                 "tar.xz",
                 "tar.gz",
                 "tar.bz2"
