✨ [feat] Add Windows 7 compatibility build process
 - Introduced a new GitHub Actions workflow for building Windows 7 compatibility artifacts.
 - Created `build-win7.yml` to define the build process for Windows 7 portable applications.
 - Added `build:win7` script in `package.json` to trigger the Windows 7 build.
 - Implemented `build-win7.mjs` script to handle the actual build process using Electron Builder.
 - Updated `DEVELOPMENT_GUIDE.md` to include instructions for building and testing on Windows 7.
 - Upgraded `electron-updater` dependency to version 6.7.1 for improved functionality.

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,4 @@ electron-app/coverage-temp.json
 electron-app/recent-files-test.json
 electron-app/test-report.junit.xml
 todo.md
+electron-app/temp-win7/
