--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,25 +1,25 @@
 {
-    "tagname-lowercase": true,
+    "alt-require": true,
     "attr-lowercase": true,
+    "attr-no-duplication": false,
+    "attr-unsafe-chars": true,
     "attr-value-double-quotes": true,
     "attr-value-not-empty": false,
-    "attr-no-duplication": false,
     "doctype-first": true,
+    "doctype-html5": false,
+    "head-script-disabled": false,
+    "href-abs-or-rel": false,
+    "id-class-ad-disabled": true,
+    "id-class-value": "false",
+    "id-unique": true,
+    "inline-script-disabled": true,
+    "inline-style-disabled": false,
+    "space-tab-mixed-disabled": "space",
+    "spec-char-escape": true,
+    "src-not-empty": true,
+    "style-disabled": true,
     "tag-pair": true,
     "tag-self-close": true,
-    "spec-char-escape": true,
-    "id-unique": true,
-    "src-not-empty": true,
-    "title-require": true,
-    "alt-require": true,
-    "doctype-html5": false,
-    "id-class-value": "false",
-    "style-disabled": true,
-    "inline-style-disabled": false,
-    "inline-script-disabled": true,
-    "space-tab-mixed-disabled": "space",
-    "id-class-ad-disabled": true,
-    "href-abs-or-rel": false,
-    "attr-unsafe-chars": true,
-    "head-script-disabled": false
+    "tagname-lowercase": true,
+    "title-require": true
 }
