--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-    "recommendations": ["dbaeumer.vscode-eslint", "ms-vscode.extension-test-runner"]
+    "recommendations": [
+        "dbaeumer.vscode-eslint",
+        "ms-vscode.extension-test-runner"
+    ]
 }
