--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,4 @@
 {
-    "version": "0.2.0",
     "configurations": [
         {
             "type": "node",
@@ -15,5 +14,6 @@
             "outFiles": ["${workspaceFolder}/out/**/*.js"],
             "preLaunchTask": "${defaultBuildTask}"
         }
-    ]
+    ],
+    "version": "0.2.0"
 }
