--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -204,6 +204,7 @@
         "build:dev:package:prod:all": "cross-env NODE_ENV=production electron-builder -l --dir",
         "build:dev:package:prod:all:zip": "cross-env NODE_ENV=production electron-builder -l --dir --win --x64 --ia32 --mac --linux --zip",
         "build:prod": "cross-env NODE_ENV=production electron-builder",
+        "build:win7": "node ./scripts/build-win7.mjs",
         "changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
         "changelog:all": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
         "clean-releases": "powershell -ExecutionPolicy Bypass -File ../.github/Clean-Releases.ps1",
@@ -272,7 +273,7 @@
         "date-fns": "^4.1.0",
         "electron-conf": "^1.3.0",
         "electron-log": "^5.4.3",
-        "electron-updater": "^6.7.0",
+        "electron-updater": "^6.7.1",
         "hammerjs": "^2.0.8",
         "jquery": "^3.7.1",
         "jszip": "^3.10.1",
@@ -341,7 +342,6 @@
         "ts-migrate-plugins": "^0.1.35",
         "vitest": "^4.0.9"
     },
-    "peerDependencies": {},
     "packageManager": "npm@11.6.2",
     "engines": {
         "node": ">=16.0.0",
