🔧 [build] Update dependencies and package manager version  - Updated `@vitest/ui` from `^4.0.13` to `^4.0.14`  - Updated `@typescript-eslint/eslint-plugin` from `^8.47.0` to `^8.48.0`  - Updated `@vitest/coverage-v8` from `^4.0.13` to `^4.0.14`  - Updated `vitest` from `^4.0.13` to `^4.0.14`  - Updated `npm` version from `11.6.3` to `11.6.4`
📝 [docs] Improve parameter documentation in rendererUtils.js
 - Changed parameter name from `isLoading` to `loading` in `setLoading` function for clarity

📝 [docs] Enhance documentation in chartOverlayColorPalette.js
 - Updated parameter description from `array` to `inputArray` for better understanding

📝 [docs] Clarify error handling initialization documentation
 - Added details about the `_options` parameter in `initializeErrorHandling` function

📝 [docs] Refine logging function documentation
 - Added typedef for `RendererLogger` and clarified the purpose of `createRendererLogger`

📝 [docs] Update state management documentation
 - Changed parameter name from `options` to `_options` in `setLegacyState` for consistency

📝 [docs] Improve state validator documentation
 - Updated typedef for `StateValidator` to include parameter types

🎨 [style] Add Mermaid configuration file
 - Created `mermaid.config.json` with dark theme and customized theme variables for better visualization

Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -703,6 +703,7 @@ jobs:
                       | Windows  | ia32 / win32 | MSI TAR.XZ       | [Fit-File-Viewer-msi-ia32-${{ needs.bump-version.outputs.new_version }}.tar.xz](https://github.com/${{ github.repository }}/releases/download/v${{ needs.bump-version.outputs.new_version }}/Fit-File-Viewer-msi-ia32-${{ needs.bump-version.outputs.new_version }}.tar.xz) |
                       | Windows  | ia32 / win32 | MSI ZIP          | [Fit-File-Viewer-msi-ia32-${{ needs.bump-version.outputs.new_version }}.zip](https://github.com/${{ github.repository }}/releases/download/v${{ needs.bump-version.outputs.new_version }}/Fit-File-Viewer-msi-ia32-${{ needs.bump-version.outputs.new_version }}.zip) |
                       | Windows  | ia32 / win32 | Portable         | [Fit-File-Viewer-portable-ia32-${{ needs.bump-version.outputs.new_version }}.exe](https://github.com/${{ github.repository }}/releases/download/v${{ needs.bump-version.outputs.new_version }}/Fit-File-Viewer-portable-ia32-${{ needs.bump-version.outputs.new_version }}.exe) |
+                      | Windows  | Win7 (legacy)| Portable EXE / ZIP| [Fit-File-Viewer-win7-v${{ needs.bump-version.outputs.new_version }}.exe / .exe.zip](https://github.com/${{ github.repository }}/releases/download/v${{ needs.bump-version.outputs.new_version }}/) |
 
                       | Mac      | Builds       | Format           | Download Link |
                       |----------|--------------|------------------|---------------|
