--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -206,7 +206,7 @@ jobs:
             - name: Install dmg-license workaround for Mac Builder
               id: install_dmg_license
               if: runner.os == 'macOS'
-              run: npm install --save-dev dmg-license
+              run: npm install --save-dev dmg-license --force
               working-directory: electron-app
 
             - name: Install Windows build dependencies (Chocolatey)
