--- a/.github/workflows/build-win7.yml
+++ b/.github/workflows/build-win7.yml
@@ -47,7 +47,7 @@ jobs:
                   cache-dependency-path: electron-app/package-lock.json
 
             - name: Install dependencies
-              run: npm ci
+              run: npm ci --force
 
             - name: Build Win7 portable artifact
               env:
