✨ [feat] Enhance map rendering and theme management  - 🛠️ [fix] Implement defensive cleanup for overlay filename tooltips during map re-renders  - 🛠️ [fix] Clear old Leaflet control references to prevent memory leaks  - 🛠️ [fix] Ensure proper cleanup of drawn items and controls before rendering new map instances  - ⚡ [perf] Optimize map type button updates with global reference for shared document listener  - 🛠️ [fix] Remove redundant mouse event listeners for collapsing controls  - 🛠️ [fix] Improve zoom slider interaction handling to prevent jank during user input  - ✨ [feat] Introduce singleton subscription for state changes to prevent leaks during UI re-renders  - 🛠️ [fix] Migrate legacy theme storage keys to a canonical format for consistency  - ✨ [feat] Normalize theme values across the application for better state management  - 🎨 [style] Refactor theme toggle button creation to avoid innerHTML for improved security  - 🧹 [chore] Update Vitest configuration to refine coverage thresholds and exclude non-essential files
Signed-off-by: Nick2bad4u <20943337+Nick2bad4u@users.noreply.github.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -8,6 +8,10 @@ coverage/
 *.min.js
 *.min.css
 
+# Generated test artifacts
+electron-app/test-report.junit.xml
+electron-app/logs/
+
 # Ignore Change Logs
 **/CHANGELOG.md
 
