--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# electron-app: generated test artifacts
+electron-app/test-report.junit.xml
+electron-app/logs/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
