--- a/electron-app/.prettierignore
+++ b/electron-app/.prettierignore
@@ -8,6 +8,10 @@ coverage/
 *.min.js
 *.min.css
 
+# Generated test artifacts
+test-report.junit.xml
+logs/
+
 # Ignore Change Logs
 **/CHANGELOG.md
 
